Add changes to html & css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link text-dark" aria-current="page" href="#">Features</a>
         </li>
         <li class="nav-item col-4">
-          <a class="nav-link text-dark" href="#">How It Works</a>
+          <a class="nav-link text-dark" href="#">How It Work</a>
         </li>
         <li class="nav-item col-4">
           <a class="nav-link text-dark">Pricing</a>
